# fundaments_celry

./: .gitignore  README.md  desc.txt  manage.py  pyproject.toml
page_request/: admin.py  apps.py  models.py  signals.py  tasks.py
page_request/migrations/: 0001_initial.py
pdfsvc/: asgi.py  settings.py  urls.py  wsgi.py
