[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["GjoeKariuki <githaigageorge96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
weasyprint = "^62.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
